feat: add go beacon agent
